--- a/components/components.module.css
+++ b/components/components.module.css
@@ -1,6 +1,19 @@
 .nav {
   animation: hue 10s infinite linear;
   margin-top: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  margin-bottom:20px;
+}
+
+@keyframes fadeIn{
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 @keyframes hue {
   from {
@@ -17,6 +30,7 @@
   padding: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   perspective: 1000px;
+  animation: fadeIn 0.7s ease;
 }
 
 .badge {
