--- a/components/components.module.css
+++ b/components/components.module.css
@@ -26,8 +26,9 @@
 .container {
   background-color: rgba(0, 0, 0, 0.03);
   border-radius: 30px;
-  margin: 20px;
-  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   perspective: 1000px;
   animation: fadeIn 0.7s ease;
@@ -45,6 +46,12 @@
   display: inline-block;
   font-size: 15px;
 }
+.video{
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
 
 .modalButton {
   color: black;
@@ -69,15 +76,16 @@
   transition: background-color 0.5s ease;
   font-size: 20px;
 }
-.overlay>button{
+.close{
   border:none;
   margin-top:10px;
   height:50px;
+  width:50px;
   border-radius: 50%;
   background-color: black;
   color:#FFFFFF;
 }
-.overlay>button:hover{
+.close:hover{
   background-color: blue;
 }
 .content{
