--- a/components/components.module.css
+++ b/components/components.module.css
@@ -128,3 +128,28 @@
   background-color: transparent;
   transition: color 0.3s;
 }
+.toggleWrapper{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin:20px;
+}
+.toggle{
+  display:flex;
+  align-items: center;
+  width:40px;
+  height:20px;
+  border-radius: 15px;
+  position:relative;
+  cursor:pointer;
+}
+.toggle::before{
+  content:'';
+  position:absolute;
+  width:16px;
+  height:16px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition:0.3s;
+}
