--- a/app/(route)/edit/page.module.css
+++ b/app/(route)/edit/page.module.css
@@ -49,10 +49,11 @@
     width: 22rem;
     height: 500px;
 }
-.editForm > button{
+.editForm > div > button{
     border:none;
     border-radius: 5px;
     width:5rem;
     background-color: lightpink;
     padding: 10px;
+    margin:10px;
 }
