--- a/app/(route)/[date]/page.module.css
+++ b/app/(route)/[date]/page.module.css
@@ -4,14 +4,26 @@
   align-items: center;
   width: 100%;
 }
+
+.video {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px 0;
+  background-color: rgba(0, 0, 0, 0.07);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 999; */
+}
 .video p {
   font-weight: bold;
   margin: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 .video h4 {
-  margin-bottom: 20px;
-}
-.video {
-  margin-top: 20px;
   margin-bottom: 20px;
 }
