--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -3,7 +3,30 @@
   margin-top: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
+  font-style: unset;
+  position: sticky;
+  top: 10px; /* Add this line to make it sticky at the top */
 }
+  
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+/* .nav span {
+  display: inline-block;
+  animation: bounce 0.5s infinite;
+} */
+
 
 @keyframes fadeIn {
   from {
@@ -90,6 +113,11 @@
   justify-content: center;
   align-items: center;
   font-weight: bold;
+  margin-top:5px;
+}
+.badge button{
+  font-size: 7px;
+  color:lightslategray;
 }
 .badge button {
   border: none;
