--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Lobster&family=Nabla&display=swap');
 .nav {
+  margin:15px 0;
   animation: hue 10s infinite linear;
-  margin-top: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
-  font-style: unset;
-  position: sticky;
-  top: 10px; /* Add this line to make it sticky at the top */
+  font-family: 'Black Ops One', sans-serif;
+  word-spacing: 7px;
+  font-size: 40px;
 }
   
 
@@ -27,6 +30,20 @@
   animation: bounce 0.5s infinite;
 } */
 
+.search {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width:150px;
+  margin-right:35%;
+  background-color: rgba(0, 0, 0, 0.02);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.search:focus {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: 1s ease;
+}
 
 @keyframes fadeIn {
   from {
@@ -124,7 +141,7 @@
   background-color: transparent;
   margin-left: 5px;
   font-weight: lighter;
-  font-size: 12px;
+  font-size: 10px;
 }
 .list {
   list-style-type: none;
