Refactor playlist pagination and styling

--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -67,11 +67,16 @@
     -webkit-filter: hue-rotate(360deg);
   }
 }
+.playlists{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .container {
   background-color: rgba(0, 0, 0, 0.03);
+  max-width: 1700px;
   border-radius: 30px;
-  /* margin-top: 20px;
-  margin-bottom: 20px; */
   margin:20px 10px;
   padding: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
